<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181C5C">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="#FFFFF48E"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/titleWD"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#595751"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_default_male_pfp"
        android:contentDescription="@string/playerProfile"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/ic_previous_move" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:contentDescription="@string/no"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:srcCompat="@drawable/abc_vector_test" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="35dp"
        android:layout_height="50dp"
        android:contentDescription="@string/no"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/demo_name"
        app:layout_constraintStart_toEndOf="@+id/demo_name"
        app:layout_constraintTop_toTopOf="@+id/demo_name"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/demo_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FFFFF48E"
        android:contentDescription="@string/playerName"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:onClick="onClickPlayerName"
        android:text="@string/defaultPlayerName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#595751"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/yesButtonWarn"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFF48E"
        android:contentDescription="@string/playerName"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:onClick="onClickPlayerName"
        android:text="@string/yes"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#595751"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintEnd_toStartOf="@+id/noButtonWarn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/lastWarning"
        app:layout_constraintTop_toBottomOf="@+id/lastWarning" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/messageWD1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/messageWD2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <TextView
        android:id="@+id/lastWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#F44336"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/messageWD3"
        android:textColor="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/noButtonWarn"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_pressed_button"
        android:contentDescription="@string/playerName"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:onClick="onClickPlayerName"
        android:text="@string/no"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#595751"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lastWarning"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yesButtonWarn"
        app:layout_constraintTop_toBottomOf="@+id/lastWarning" />
</androidx.constraintlayout.widget.ConstraintLayout>