<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#181C5C">

    <ImageView
        android:id="@+id/playerSymbol"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_cross3d"
        android:contentDescription="@string/PlayerIcon"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/button_ic_swap"
        android:contentDescription="@string/Swap"
        app:layout_constraintBottom_toBottomOf="@+id/opponentSymbol"
        app:layout_constraintEnd_toStartOf="@+id/opponentSymbol"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playerSymbol"
        app:layout_constraintTop_toTopOf="@+id/playerSymbol" />

    <ImageView
        android:id="@+id/opponentSymbol"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_circle3d"
        android:contentDescription="@string/PlayerIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFF48E"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/titleSSD"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#595751"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_pressed_button"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/yes"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#595751"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/noButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_pressed_button"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/no"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#595751"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yesButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFF48E"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/player"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#595751"
        app:layout_constraintBottom_toTopOf="@+id/yesButton"
        app:layout_constraintEnd_toEndOf="@+id/playerSymbol"
        app:layout_constraintStart_toStartOf="@+id/playerSymbol"
        app:layout_constraintTop_toBottomOf="@+id/playerSymbol" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFF48E"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/opponent"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#595751"
        app:layout_constraintBottom_toTopOf="@+id/noButton"
        app:layout_constraintEnd_toEndOf="@+id/opponentSymbol"
        app:layout_constraintStart_toStartOf="@+id/opponentSymbol"
        app:layout_constraintTop_toBottomOf="@+id/opponentSymbol" />

</androidx.constraintlayout.widget.ConstraintLayout>